# CustosaXopenclaw

./: .gitignore  LICENSE  PROMPT_INJECTION_HARDENING_PLAN.md  README.md  install.sh  pyproject.toml
custosa/: __init__.py  main.py  updater.py
custosa/core/: __init__.py  discovery.py  proxy.py
custosa/detection/: __init__.py  engine.py
custosa/installer/: __init__.py  setup.py
custosa/openclaw_plugin/: __init__.py  index.js  openclaw.plugin.json
custosa/telegram/: __init__.py  bot.py
docs/: index.html
packaging/homebrew/: README.md
packaging/homebrew/Casks/: custosa.rb
scripts/: build_macos.sh  package_dmg.sh  package_zip.sh
