[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custosa"
version = "1.0.7"
description = "Prompt Injection Protection for Moltbot"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Custosa", email = "support@custosa.dev"}
]
keywords = [
    "security",
    "prompt-injection",
    "moltbot",
    "ai-security",
    "llm-security",
    "proxy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "python-telegram-bot>=20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
ml = [
    "transformers>=4.30",
    "torch>=2.0",
    "sentence-transformers>=2.2",
]

[project.scripts]
custosa = "custosa.main:main"
custosa-install = "custosa.installer.setup:run_installer"

[project.urls]
Homepage = "https://github.com/custosa/custosa"
Documentation = "https://docs.custosa.dev"
Repository = "https://github.com/custosa/custosa"
Issues = "https://github.com/custosa/custosa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["custosa*"]
exclude = []

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
